[tool.poetry]
name = "e-commerce-search-enhancement"
version = "0.1.0"
description = ""
authors = ["Salman Ahmad <ssalmanmughal73@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pillow = "^10.4.0"
datasets = "^2.21.0"
matplotlib = "^3.9.2"
transformers = "^4.44.2"
chromadb = "^0.5.5"
huggingface-hub = "^0.24.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
